# HPC-Project-1-CLion

./: CMakeLists.txt  README.md  analysis.md  commands.txt  firstprivate-example.c  hello-world.c  hello_mpi.c  lastprivate-example.c  loop-parallel-automatic.c  loop-parallel-manual.c  loop-parallel-shortcut.c  loop-parallel.c  mpi-implementation.c  ordered-clause.c  output  parallel-hello-world.c  parallel-implementation.c  parallel-job.sh  pi.c  private-example.c  reduction-example.c  result  schedule-example.c  sequential-job.sh  sequential.c  table.md  test-parallel.c  vector-addition-parallel.c
